--- a/styles/global.css
+++ b/styles/global.css
@@ -103,6 +103,10 @@ nav,
 section {
 	display: block;
 }
+button {
+	border: 0;
+	padding: 0;
+}
 body {
 	line-height: 1;
 }
@@ -126,18 +130,14 @@ table {
 	border-spacing: 0;
 }
 body {
-	padding-top: 150px;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	background-color: #ffe6c5;
+	padding-top: 100px;
+	font-family: 'Pretendard', sans-serif;
+	letter-spacing: -0.5px;
+	background-color: #fff;
 	color: #000;
-	font-size: 18px;
 }
 
 a {
-	color: #fff;
+	color: #000;
 	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
 }
