--- a/styles/navigation.module.css
+++ b/styles/navigation.module.css
@@ -1,28 +1,53 @@
 .nav {
-	background-color: #2d2d2d;
 	position: fixed;
-	width: 30%;
-	margin: 0 auto;
-	top: 20px;
-	border-radius: 50px;
-	padding: 20px 0px;
-	left: 50%;
+	top: 0;
+	left: 0;
 	z-index: 10;
-	transform: translateX(-50%);
-}
-
-.nav ul {
+	width: 100%;
+	height: 100%;
+	min-height: 100px;
+	max-height: 100px;
+	padding: 0 40px;
+	color: #000;
+	background-color: #fff;
+	border-bottom: 1px solid #e6e6e6;
 	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.menu {
+	height: 100%;
+	display: flex;
+	align-items: center;
 	justify-content: center;
-	gap: 50px;
+	gap: 45px;
+}
+.menu li {
+	height: 100%;
+	font-size: 24px;
+	border-bottom: 2px solid transparent;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.menu li.active {
+	border-bottom: 2px solid #000;
 }
 
-.nav ul li {
-	list-style: none;
-	transform: none;
-	transition: all 0.1s ease-in-out;
+.user {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
 }
-
-.nav ul li:hover {
-	transform: scale(1.05);
+.user li button {
+	position: relative;
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	background-color: #000;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
