--- a/styles/home/home-amount-card.module.css
+++ b/styles/home/home-amount-card.module.css
@@ -31,10 +31,13 @@
 	gap: 20px;
 }
 .oil_type {
-	padding: 15px 20px;
+	height: 40px;
+	padding: 10px 20px;
 	border-radius: 50px;
 	background-color: #d9d9d9;
 	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .price_info_wrap {
