design: 홈 - 변동, 뉴스 추가

--- a/styles/home/home-amount.module.css
+++ b/styles/home/home-amount.module.css
@@ -49,6 +49,10 @@
 	flex-direction: column;
 	gap: 40px;
 }
+.amount_wrap::-webkit-scrollbar {
+	width: 0px;
+}
+
 .amount_box {
 	width: 100%;
 	display: flex;
