--- a/styles/home/home-news.module.css
+++ b/styles/home/home-news.module.css
@@ -1,6 +1,6 @@
 .container {
 	width: 100%;
-	height: calc(100vh - 373px);
+	height: 100%;
 	padding: 40px;
 	display: flex;
 	flex-direction: column;
@@ -15,4 +15,18 @@
 }
 .title {
 	font-size: 32px;
+}
+
+.news_wrap {
+	width: 100%;
+	height: 100%;
+	overflow-y: auto;
+	display: flex;
+	align-items: start;
+	justify-content: start;
+	flex-direction: column;
+	gap: 20px;
+}
+.news_wrap::-webkit-scrollbar {
+	display: none;
 }
