--- a/styles/home/home-mypage.module.css
+++ b/styles/home/home-mypage.module.css
@@ -1,62 +1,63 @@
 .container {
-	width: 100%;
-	min-width: 320px;
-	max-width: 460px;
-	padding: 40px;
-	border-right: 1px solid #e6e6e6;
-	border-bottom: 1px solid #e6e6e6;
-	display: flex;
-	flex-direction: column;
-	gap: 40px;
+    width: 100%;
+    min-width: 320px;
+    max-width: 460px;
+    padding: 40px;
+    border-right: 1px solid #e6e6e6;
+    border-bottom: 1px solid #e6e6e6;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 
 .profile {
-	display: flex;
-	align-items: center;
-	justify-content: start;
-	gap: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 20px;
 }
 .profile_img {
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
-	background-color: #ffe6af;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #ffe6af;
 }
 .profile_name {
-	font-size: 24px;
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .oil_info {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	gap: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 .oil_info li {
-	display: flex;
-	align-items: center;
-	justify-content: start;
-	gap: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 20px;
 }
 
 .oil_icon {
-	width: 50px;
-	height: 50px;
-	background-color: #e6e6e6;
-	border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: #e6e6e6;
+    border-radius: 50%;
 }
 .info_box {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 .info_box .info_text {
-	font-size: 28px;
+    font-size: 28px;
 }
 .info_box .info_title {
-	color: #c5c5c5;
-	font-size: 14px;
+    color: #c5c5c5;
+    font-size: 14px;
 }
