--- a/styles/home/home-news-card.module.css
+++ b/styles/home/home-news-card.module.css
@@ -1,60 +1,64 @@
 .container {
-	width: 100%;
-	height: 100%;
-	padding: 15px 22px 17px 15px;
-	border-radius: 30px;
-	background-color: #d9d9d9;
-	display: flex;
-	align-items: start;
-	justify-content: start;
-	gap: 20px;
+    width: 100%;
+    height: 100%;
+    padding: 15px 22px 17px 15px;
+    border-radius: 30px;
+    background-color: #d9d9d9;
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    gap: 20px;
 }
 
 .main_img {
-	min-width: 200px;
-	min-height: 200px;
-	border-radius: 20px;
-	background-color: #fff;
+    width: 100%;
+    height: 100%;
+    min-width: 50px;
+    min-height: 50px;
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 20px;
+    background-color: #fff;
 }
 
 .text_wrap {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	align-items: start;
-	justify-content: space-between;
-	flex-direction: column;
-	gap: 10px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .title_wrap {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	align-items: start;
-	justify-content: start;
-	flex-direction: column;
-	gap: 10px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    flex-direction: column;
+    gap: 10px;
 }
 .title_wrap .title {
-	font-size: 26px;
-	line-height: 1.4;
+    font-size: 24px;
+    line-height: 1.2;
 }
 .title_wrap .text {
-	width: 100%;
-	line-height: 1.5;
-	display: -webkit-box;
-	-webkit-box-orient: vertical;
-	overflow: hidden;
-	-webkit-line-clamp: 3;
+    width: 100%;
+    line-height: 1.5;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 3;
 }
 
 .info_wrap {
-	width: 100%;
-	font-size: 14px;
-	color: #838383;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	gap: 10px;
+    width: 100%;
+    font-size: 14px;
+    color: #838383;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
 }
